<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/navigation_info" />
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_list"
        android:title="@string/navigation_shop" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_filter"
        android:title="@string/navigation_search" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shoppingbag"
        android:title="@string/navigation_cart" />
</menu>
