<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkout.CheckoutActivity">

    <!-- Background ImageView -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/lou"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description_lou"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Checkout Title -->
            <TextView
                android:id="@+id/checkoutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp" />

            <!-- Card Number -->
            <EditText
                android:id="@+id/cardNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:background="@android:color/white"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp" />

            <!-- Card Expiry -->
            <EditText
                android:id="@+id/cardExpiryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_expiry"
                android:background="@android:color/white"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp" />

            <!-- Card CVV -->
            <EditText
                android:id="@+id/cardCVVEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_cvv"
                android:background="@android:color/white"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp" />

            <!-- Delivery Address -->
            <EditText
                android:id="@+id/deliveryAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delivery_address"
                android:background="@android:color/white"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp" />

            <!-- Buy Button -->
            <Button
                android:id="@+id/buyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buy_now"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
