<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/lou">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

        <!-- Container for Delivery Address -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#CCFFFFFF"
            android:padding="16dp"
            android:elevation="4dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/deliveryAddressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:inputType="textPostalAddress"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_information"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_gravity="end"
                android:padding="8dp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Container for Order History -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#CCFFFFFF"
            android:padding="16dp"
            android:elevation="4dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/orderHistoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_history"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewOrders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
